fix(style): fix checkbox-checked css in dark mode

--- a/src/design/theme.less
+++ b/src/design/theme.less
@@ -37,9 +37,4 @@ html[data-theme='light'] {
     box-shadow: 1px 0 0 0 #434343, 0 1px 0 0 #434343, 1px 1px 0 0 #434343, 1px 0 0 0 #434343 inset,
       0 1px 0 0 #434343 inset;
   }
-
-  .ant-checkbox-checked .ant-checkbox-inner::after {
-    border-top: 0;
-    border-left: 0;
-  }
 }
